# inyeon-upstream

./: .dockerignore  .env.example  .railwayignore  Dockerfile  README.md  pyproject.toml
backend/: main.py
backend/agents/: __init__.py  base.py  changelog_agent.py  changelog_nodes.py  changelog_state.py  commit_agent.py  conflict_agent.py  conflict_nodes.py  conflict_state.py  git_agent.py  orchestrator.py  pr_agent.py  pr_nodes.py  pr_state.py  review_agent.py  split_agent.py  split_nodes.py  split_state.py  state.py  tools.py
backend/clustering/: __init__.py  base.py  conventional.py  directory.py  hybrid.py  models.py  semantic.py
backend/core/: config.py  dependencies.py
backend/diff/: __init__.py  models.py  parser.py
backend/engine/: __init__.py  base.py  http.py  local.py
backend/models/: events.py  schemas.py
backend/prompts/: analyze_prompt.py  changelog_prompt.py  commit_prompt.py  conflict_prompt.py  pr_prompt.py
backend/routers/: agent.py  analyze.py  changelog.py  commit.py  conflict.py  pr.py  rag.py  split.py  streaming.py
backend/services/: ollama_client.py
backend/utils/: cost.py
cli/: api_client.py  config.py  display.py  engine.py  git_utils.py  main.py  pipeline.py
cli/commands/: agent.py  analyze.py  auto.py  changelog.py  commit.py  hook.py  index.py  pr.py  resolve.py  review.py  split.py
tests/: conftest.py
tests/backend/: test_analyze.py  test_changelog_agent.py  test_changelog_nodes.py  test_changelog_router.py  test_clustering.py  test_commit.py  test_conflict_agent.py  test_conflict_nodes.py  test_conflict_router.py  (+10 more)
(+14 files in other folders)
